# Adjutant

./: CLAUDE.md  README.md  install.sh  plan.md  pyproject.toml
docs/: GUIDE.md
src/adjutant/: __init__.py  __main__.py  config.py
src/adjutant/bot/: __init__.py  handlers.py  telegram.py
src/adjutant/core/: chat.py  dispatcher.py  embeddings.py  file_ops.py  index.py  memory.py  reminders.py  retriever.py  scanner.py  sop.py  wiki.py
src/adjutant/core/backends/: __init__.py  ollama.py  subprocess_backend.py
src/adjutant/mcp/: __init__.py  server.py
src/adjutant/models/: session.py
src/adjutant/prompts/: __init__.py  persona.md  wiki_ingest.md  wiki_schema.md
src/adjutant/prompts/directives/: obey_command.md  report_mode.md
src/adjutant/sop/: daily-summary.md  experiment-preflight.md  hypothesis-log.md  inbox-triage.md  stuck-debug-trigger.md  task-update.md  weekly-continuity-check.md  weekly-report.md
src/adjutant/web/: __init__.py  server.py
src/adjutant/web/static/: app.js  index.html  style.css
tests/: test_chat.py  test_config.py  test_dispatcher.py  test_file_ops.py  test_scanner.py  test_session.py  test_sop.py
worklog/: README.md
worklog/agent/: 2026-03-23-120000-project-init.md  2026-03-26-telegram-sticker-document-ui-fix.md  2026-03-27-reminder-session-webdaemon.md  2026-04-07-llm-wiki-integration.md
