[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adjutant"
version = "0.1.0"
description = "Personal AI Adjutant — knowledge management assistant with SOP workflows"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-telegram-bot>=21.0",
    "httpx>=0.27",
    "lancedb>=0.4",
    "pyarrow>=15.0",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
local-embeddings = [
    "sentence-transformers>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
adjutant = "adjutant.__main__:cli"
adjutant-mcp = "adjutant.mcp.server:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src/adjutant"]

[tool.hatch.build]
artifacts = ["src/adjutant/prompts/*.md", "src/adjutant/prompts/directives/*.md", "src/adjutant/sop/*.md"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
